p3/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil42-ingress
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - path: /wil42
        pathType: Prefix
        backend:
          service:
            name: wil42-service
            port:
              number: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
